--- a/static/assets/css/ie8.css
+++ b/static/assets/css/ie8.css
@@ -1,13 +1,7 @@
-/*
-	Identity by HTML5 UP
-	html5up.net | @n33co
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
-*/
 
-/* List */
 
 	ul.icons li a {
-		-ms-behavior: url("assets/js/PIE.htc");
+		-ms-behavior: url("static/assets/js/PIE.htc");
 	}
 
 		ul.icons li a:before {
@@ -18,11 +12,11 @@
 /* Main */
 
 	#main {
-		-ms-behavior: url("assets/js/PIE.htc");
+		-ms-behavior: url("static/assets/js/PIE.htc");
 	}
 
 		#main .avatar img {
-			-ms-behavior: url("assets/js/PIE.htc");
+			-ms-behavior: url("static/assets/js/PIE.htc");
 		}
 
 /* Footer */
