--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
 				<!-- Main -->
 					<section id="main">
 						<header>
-							<span class="avatar"><img src="static/images/lynne.jpg" alt="" /></span>
+							<span class="avatar"><img src="static/images/pic.png" alt="" /></span>
 							<h1>Lynne Munini</h1>
 							<p>Python Developer | Data Enthusiast</p>
 						</header>
