--- a/static/assets/css/ie9.css
+++ b/static/assets/css/ie9.css
@@ -1,6 +1,13 @@
+/*
+	Identity by HTML5 UP
+	html5up.net | @n33co
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+*/
+
+/* Basic */
 
 	body {
-		background-image: url("../../images/background.jpg");
+		background-image: url("../../images/bg.jpg");
 		background-repeat: no-repeat;
 		background-size: cover;
 		background-position: bottom center;
