--- a/templates/index.html
+++ b/templates/index.html
@@ -19,9 +19,10 @@
 				<!-- Main -->
 					<section id="main">
 						<header>
-							<span class="avatar"><img src="static/images/pic.png" alt="" /></span>
+							<span class="avatar"><img src="static/images/lg.png" alt="" /></span>
 							<h1>Lynne Munini</h1>
-							<p>Python Developer | Data Enthusiast</p>
+							<p>Python Developer. Data Enthusiast</p>
+							<p>Based Nairobi, KE🇰🇪</p>
 						</header>
 						<!--
 						<hr />
