--- a/static/assets/css/main.css
+++ b/static/assets/css/main.css
@@ -81,10 +81,10 @@ linear-gradient(60deg, rgba(255, 165, 150, 0.5) 5%, rgba(0, 228, 255, 0.35)),*/
 	body {
 		height: 100%;
         background-color: #ffffff;
-		background-image: url("images/overlay.png"), url("../../images/bg.jpg");
-		background-image: url("images/overlay.png"), url("../../images/bg.jpg");
-		background-image: url("images/overlay.png"), url("../../images/bg.jpg");
-		background-image: url("images/overlay.png"), url("../../images/bg.jpg");
+		background-image: url("images/overlay.png"), url("../../images/bcg.jpg");
+		background-image: url("images/overlay.png"), url("../../images/bcg.jpg");
+		background-image: url("images/overlay.png"), url("../../images/bcg.jpg");
+		background-image: url("images/overlay.png"), url("../../images/bcg.jpg");
 		background-repeat: repeat,			no-repeat,			no-repeat;
 		background-size: 100px 100px, cover,				cover;
 		background-position: top left,		center center,		bottom center;
