--- a/templates/index.html
+++ b/templates/index.html
@@ -21,8 +21,8 @@
 						<header>
 							<span class="avatar"><img src="static/images/pic.png" alt="" /></span>
 							<h1>Lynne Munini</h1>
-							<p>FullStack Software Engineer</p>
-							<span>Python | Django | Flask</span>
+							<p>Software Engineer</p>
+							<span>Python | Kotlin | DevOps</span>
 							<br><br>
 
 						</header>
